main2026: Fix layout issue in mobile sponsor list

--- a/backend/Instanssi/main2026/static/main2026/css/style.scss
+++ b/backend/Instanssi/main2026/static/main2026/css/style.scss
@@ -106,8 +106,9 @@ $main-content-height: calc(100vh - #{$main-header-actual} - #{$main-footer-actua
 
         .sponsors-container {
             padding-left: 8px; // match sitemap items
+            display: flex;
+            flex-wrap: wrap;
             .sponsor {
-                display: inline-block;
                 float: none;
             }
         }
